backend/shipping-service/src/main/k8s/manufacturing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manufacturing-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: manufacturing.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manufacturing-ui-service
                port:
                  number: 7001
